# scratch_study

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  main_pl.py  pyproject.toml  requirements.txt  rnn_cell.py  test.ipynb  test_dictionary.ipynb
configs/: config.yaml
configs/data/: default.yaml
configs/model/: attention.yaml  seq2seq.yaml  transformer.yaml
configs/trainer/: default.yaml
nlp/core/: base.py  train.py
nlp/datasets/: data_helper.py
nlp/model/: base.py  lstm.py  rnn.py
nlp/models/: __init__.py  attention.py  base.py  gru.py  lstm.py  rnn.py  seq2seq.py  transformer.py
nlp/utils/: metrics.py
src/core/: base.py
src/datasets/: data_helper.py
src/models/: lstm.py  rnn.py  seq2seq.py
src/utils/: utils.py  weight_initialization.py
src_pl/: data_helper.py  train_pl.py
